2002-10-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/mf-to-table.py (parse_logfile): Bugfix. 

	* mf/feta-autometric.mf: Write foundry and family to log.

	* mf/GNUmakefile: Fixes for pfx builds.  Also write sketch
	font translation table.

	* buildscripts/mf-to-table.py: Better font info into afm.

	* buildscripts/make-font-dir.py: Use font info from afm.  Mftrace
	1.0.9 required.

	* configure.in: Whine for mftrace 1.0.9.

2002-10-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parser.yy (chord_body): allow <<c e>>4 notation.

	* lily/main.cc (main_prog): don't try to load init.EXT when
	processing foo.EXT.

2002-10-15  Rune Zedeler  <rune@zedeler.dk>

	* scm/tex.scm (zigzig-line): added.

	* scm/ps.scm (zigzag-line): added.

	* ps/music-drawing-routines.ps (subvec): added.
	(draw_zigzag_line): added.
	
	* lily/line-spanner.cc: Add support for #'type = #'zigzag. reading
	grob properties zigzag-width and zigzag-length.

	* input/regression/glissando.ly: Add some zig-zagged glissandi.

2002-10-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/sodipodi.scm: Some fixes.  Sketch also groks this bare-bones
	svg output, including font.

2002-10-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/lily.scm: Register sodipodi output module.

	* scm/sodipodi.scm: New file.

	* lily/afm.cc (read_afm_file): Read TfmCheckSum from comment.

	* buildscripts/mf-to-table.py (base): Write TfmChecksum in
	comment, after header.
	(parse_logfile): Remove invalid key FontFamily.  Add mandatory key
	FullName.  Fix FontName key.

2002-10-14  Rune Zedeler  <rune@zedeler.dk>

	* lily/rest.cc (after_line_breaking): bugfix: dots after half
	and breve rests.
	
	* input/test/blank-notes.ly: bugfix

	* lily/rest.cc (after_line_breaking): bugfix: dots after whole
	rests. (Kim Shrier)

	* input/test/rest-dot-positions.ly: Added. (Kim Shrier)
	
2002-10-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/tex.scm: 
	* scm/ps.scm: Cleanup and remove obsolete junk.
