@@ -1,5 +1,10 @@
 2002-10-19  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* buildscripts/make-font-dir.py (sketch_p): Bugfix: only write
+	encoding part.
+	(Font_info.set_defaults): pixelsize now also defauts to '0'.
+	(sketch_p): Sketch wants only first four elements of X11 font spec.
+
 	* buildscripts/mf-to-table.py (parse_logfile): Bugfix. 
 
 	* mf/feta-autometric.mf: Write foundry and family to log.
